--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -76,7 +76,7 @@ slots:
   
 
 parts:
-  i386:
+  enable32:
     plugin: nil
     override-pull: |
       if [ ${CRAFT_TARGET_ARCH} = "amd64" ]; then
@@ -86,7 +86,7 @@ parts:
     
   lutris:
     source: https://github.com/lutris/lutris.git
-    after: [gamemode, lutris-runtime, i386]
+    after: [lutris-runtime]
     source-tag: v0.5.13
     plugin: meson
     parse-info: [share/metainfo/net.lutris.Lutris.metainfo.xml]
@@ -104,7 +104,7 @@ parts:
   
   lutris-runtime:
     plugin: nil
-    after: [i386]
+    after: [enable32]
     override-build: |
       craftctl default
       dpkg --add-architecture i386
@@ -139,6 +139,8 @@ parts:
       - libmagic1
       - libgnutls30
       - mesa-utils
+      - vulkan-tools
+      
     stage:
       - -lib/ld-linux.so.2
       - -usr/bin/cpp-7
