Add cmake as a build dependency

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -170,6 +170,8 @@ parts:
       snap/lutris/current/usr: usr
     meson-parameters:
       - --prefix=/usr
+    build-snaps:
+      - cmake
     build-packages:
       - build-essential
   
