--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -174,6 +174,7 @@ parts:
       - cmake
     build-packages:
       - build-essential
+      - libxxf86vm-dev
   
   graphics-core22:
     after: [lutris]
