Add libxres-dev as a dep

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -175,6 +175,7 @@ parts:
     build-packages:
       - build-essential
       - libxxf86vm-dev
+      - libxres-dev
   
   graphics-core22:
     after: [lutris]
