--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -174,7 +174,7 @@ parts:
   hwdata:
     source: https://github.com/vcrhonek/hwdata.git
     source-tag: v0.370
-    plugin: make
+    plugin: autotools
     build-packages:
       - build-essential
       
