Add libseat as a dep

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -200,6 +200,7 @@ parts:
       - libstb-dev 
       - glslang-tools
       - libdrm-dev
+      - libseat-dev
   
   graphics-core22:
     after: [lutris]
