Update snapcraft.yaml to add xwayland

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -201,6 +201,7 @@ parts:
       - glslang-tools
       - libdrm-dev
       - libseat-dev
+      - xwayland
   
   graphics-core22:
     after: [lutris]
