--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -202,6 +202,7 @@ parts:
       - libdrm-dev
       - libseat-dev
       - xwayland
+      - libxcb-composite0-dev
   
   graphics-core22:
     after: [lutris]
