--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -83,7 +83,7 @@ parts:
         dpkg --add-architecture i386
         apt-get update
       fi 
-    
+  
   lutris:
     source: https://github.com/lutris/lutris.git
     after: [lutris-runtime]
@@ -136,7 +136,11 @@ parts:
       - libgnutls30
       - mesa-utils
       - vulkan-tools
-      
+       on amd64:
+        - mesa-vulkan-drivers:i386
+        - libvulkan1:i386
+        - libgnutls30:i386
+        - libopenal1:i386
     stage:
       - -lib/ld-linux.so.2
       - -usr/bin/cpp-7
