--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -136,7 +136,7 @@ parts:
       - libgnutls30
       - mesa-utils
       - vulkan-tools
-      on amd64:
+      - on amd64:
         - mesa-vulkan-drivers:i386
         - libvulkan1:i386
         - libgnutls30:i386
