--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -137,11 +137,13 @@ parts:
       - libgnutls30
       - mesa-utils
       - vulkan-tools
+      - libvulkan1 
       - on amd64:
         - mesa-vulkan-drivers:i386
         - libvulkan1:i386
         - libgnutls30:i386
         - libopenal1:i386
+        - libgl1-mesa-dri:i386
     stage:
       - -lib/ld-linux.so.2
       - -usr/bin/cpp-7
