--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -159,7 +159,25 @@ parts:
     plugin: autotools
     build-packages:
       - build-essential
- 
+  
+  
+  gamemode:
+    source: https://github.com/ashuntu/gamemode.git
+    source-branch: "add-snap-support"
+    plugin: meson
+    organize:
+      snap/lutris/current/usr: usr
+    meson-parameters:
+      - --prefix=/usr
+    build-packages:
+      - libsystemd-dev
+      - pkg-config
+      - libdbus-1-dev
+    prime:
+      - usr/bin/gamemoderun
+      - usr/lib/*/libgamemode*.so.*
+  
+  
   graphics-core22:
     after: [lutris]
     source: https://github.com/MirServer/graphics-core22.git
