Better name for config plug

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -81,7 +81,7 @@ plugs:
     interface: content
     target: $SNAP/graphics
     default-provider: mesa-core22
-  migrate-lutris-config:
+  lutris-user-config:
     interface: personal-files
     read:
       - $HOME/.config/lutris
