--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -89,7 +89,7 @@ parts:
   lutris:
     source: https://github.com/lutris/lutris.git
     after: [lutris-runtime]
-    source-tag: v0.5.13
+    #source-tag: v0.5.13
     plugin: meson
     parse-info: [share/metainfo/net.lutris.Lutris.metainfo.xml]
     meson-parameters:
