--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -40,7 +40,15 @@ layout:
     symlink: $SNAP/graphics/usr/share/X11/XErrorDB
   /usr/share/X11/locale:
     symlink: $SNAP/graphics/usr/share/X11/locale
- 
+  /usr/lib/x86_64-linux-gnu/libvulkan.so.1:
+    symlink: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libvulkan.so.1
+  /usr/lib/i386-linux-gnu/libvulkan.so.1:
+    symlink: $SNAP/graphics/usr/lib/i386-linux-gnu/libvulkan.so.1
+  /usr/lib/i386-linux-gnu/libGL.so.1:
+    symlink: $SNAP/graphics/usr/lib/i386-linux-gnu/libGL.so.1
+  /usr/lib/i386-linux-gnu/libgnutls.so.30:
+    symlink: $SNAP/usr/lib/i386-linux-gnu/libgnutls.so.30  
+    
 environment:
   PYTHONPATH: ${SNAP}/usr/lib/python3/dist-packages:$PYTHONPATH
   HOME: $SNAP_USER_COMMON
@@ -137,13 +145,8 @@ parts:
       - libgnutls30
       - mesa-utils
       - vulkan-tools
-      - libvulkan1 
       - on amd64:
-        - mesa-vulkan-drivers:i386
-        - libvulkan1:i386
-        - libgnutls30:i386
-        - libopenal1:i386
-        - libgl1-mesa-dri:i386
+        - libgnutls30:1386
     stage:
       - -lib/ld-linux.so.2
       - -usr/bin/cpp-7
