--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -47,7 +47,19 @@ layout:
   /usr/lib/i386-linux-gnu/libGL.so.1:
     symlink: $SNAP/graphics/usr/lib/i386-linux-gnu/libGL.so.1
   /usr/lib/i386-linux-gnu/libgnutls.so.30:
-    symlink: $SNAP/usr/lib/i386-linux-gnu/libgnutls.so.30  
+    symlink: $SNAP/usr/lib/i386-linux-gnu/libgnutls.so.30
+  /usr/lib/x86_64-linux-gnu/libvulkan_intel.so:
+    symlink: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libvulkan_intel.so
+  /usr/lib/i386-linux-gnu/libvulkan_intel.so:
+    symlink: $SNAP/graphics/usr/lib/i386-linux-gnu/libvulkan_intel.so
+  /usr/lib/x86_64-linux-gnu/libvulkan_lvp.so:
+    symlink: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libvulkan_lvp.so
+  /usr/lib/i386-linux-gnu/libvulkan_lvp.so:
+    symlink: $SNAP/graphics/usr/lib/i386-linux-gnu/libvulkan_lvp.so
+  /usr/lib/x86_64-linux-gnu/libvulkan_radeon.so:
+    symlink: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libvulkan_radeon.so
+  /usr/lib/i386-linux-gnu/libvulkan_radeon.so:
+    symlink: $SNAP/graphics/usr/lib/i386-linux-gnu/libvulkan_radeon.so  
     
 environment:
   PYTHONPATH: ${SNAP}/usr/lib/python3/dist-packages:$PYTHONPATH
