Some more fixes

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -58,16 +58,19 @@ layout:
     symlink: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libvulkan_radeon.so
   /usr/lib/i386-linux-gnu/libvulkan_radeon.so:
     symlink: $SNAP/graphics/usr/lib/i386-linux-gnu/libvulkan_radeon.so  
-    
+  /etc/ld.so.cache:
+    bind-file: $SNAP_DATA/etc/ld.so.cache  
+
+environment:
+  PYTHONPATH: ${SNAP}/usr/lib/python3/dist-packages:$PYTHONPATH
+  HOME: $SNAP_USER_COMMON
+
 apps:
   lutris:
     command-chain:
     - bin/graphics-core22-wrapper
     command: usr/bin/lutris
     extensions: [gnome]
-    environment:
-      PYTHONPATH: ${SNAP}/usr/lib/python3/dist-packages:$PYTHONPATH
-      HOME: $SNAP_USER_COMMON
     common-id: net.lutris.Lutris 
     desktop: usr/share/applications/net.lutris.Lutris.desktop 
     plugs:
