--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -61,6 +61,7 @@ layout:
 environment:
   PYTHONPATH: ${SNAP}/usr/lib/python3/dist-packages:$PYTHONPATH
   HOME: $SNAP_USER_COMMON
+  TMPDIR: $XDG_RUNTIME_DIR
 
 apps:
   lutris:
