--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -154,7 +154,7 @@ parts:
       - gir1.2-gtk-3.0
       - gir1.2-notify-0.7
       - gir1.2-webkit2-4.1
-      - libgirepository1.0-dev
+      - libgirepository-1.0-1 
       - p7zip
       - psmisc
       - python3-dbus
