--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -91,6 +91,7 @@ apps:
       - hardware-observe
       - mount-observe
       - system-observe
+      - fuse-support
       
 plugs:
   graphics-core22:
