--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -171,10 +171,10 @@ parts:
     prime:
       - usr/bin/gamemoderun
       - usr/lib/*/libgamemode*.so.*
-  
+      
   mangohud:
     source: https://github.com/flightlessmango/MangoHud.git
-    source-tag: v0.6.9-1 
+    source-tag: "v0.6.8"
     plugin: meson
     organize:
       snap/steam/current/usr: usr
@@ -204,7 +204,7 @@ parts:
   mangohud64:
     after: [mangohud]
     source: https://github.com/flightlessmango/MangoHud.git
-    source-tag: v0.6.9-1
+    source-tag: "v0.6.8"
     plugin: meson
     organize:
       snap/steam/current/usr: usr
