--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -41,7 +41,6 @@ layout:
 apps: 
   lutris:
     command-chain:
-    - bin/gnome-extension-hack
     - bin/graphics-core22-wrapper
     command: usr/bin/lutris
     extensions: [gnome]
@@ -49,6 +48,7 @@ apps:
       PYTHONPATH: ${SNAP}/usr/lib/python3/dist-packages:$PYTHONPATH
       HOME: $SNAP_USER_COMMON
       TMPDIR: $XDG_RUNTIME_DIR
+      APPIMAGE_EXTRACT_AND_RUN: 1
     common-id: net.lutris.Lutris 
     desktop: usr/share/applications/net.lutris.Lutris.desktop 
     plugs:
@@ -92,21 +92,6 @@ slots:
   
 
 parts:
-  gnome-extension-hack:
-    plugin: dump
-    source: .
-    override-pull: |
-      cat <<'EOF' > gnome-extension-hack
-      #!/bin/sh
-      if [ "$SNAP_ARCH" = "amd64" ]; then
-        export APPIMAGE_EXTRACT_AND_RUN=1
-      fi
-      exec "$@"
-      EOF
-      chmod +x gnome-extension-hack
-    organize:
-      gnome-extension-hack: bin/gnome-extension-hack
-  
   lutris:
     source: https://github.com/lutris/lutris.git
     after: [lutris-runtime]
