--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -9,6 +9,7 @@ architectures:
     build-for: amd64
 assumes:
   - snapd2.59
+  - command-chain
   
 package-repositories:
   - type: apt
@@ -37,10 +38,13 @@ layout:
     symlink: $SNAP/graphics/usr/share/X11/XErrorDB
   /usr/share/X11/locale:
     symlink: $SNAP/graphics/usr/share/X11/locale   
+  /usr/share/zenity:
+    bind: $SNAP/usr/share/zenity 
 
 apps: 
   lutris:
     command-chain:
+    - bin/migrate-config
     - bin/graphics-core22-wrapper
     command: usr/bin/lutris
     extensions: [gnome]
@@ -83,6 +87,12 @@ plugs:
   shmem:
     interface: shared-memory
     private: true
+  lutris-user-config:
+    interface: personal-files
+    read:
+      - $HOME/.config/lutris
+      - $HOME/.local/share/lutris 
+
 
 slots:    
   lutris:
@@ -92,6 +102,17 @@ slots:
   
 
 parts:
+  migrate-script:
+    plugin: dump
+    source: .
+    stage-packages:
+      - zenity
+    stage:
+      - bin/migrate-config
+      - usr/bin/zenity
+      - usr/share/zenity
+    organize:
+      migrate-config: bin/migrate-config
   lutris:
     source: https://github.com/lutris/lutris.git
     after: [lutris-runtime]
