--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,8 +1,8 @@
 name: lutris
 base: core22
 adopt-info: lutris
-grade: devel
-confinement: devmode
+grade: stable
+confinement: strict
 compression: lzo
 architectures:
   - build-on: amd64
