--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,8 +1,8 @@
 name: lutris
 base: core22
 adopt-info: lutris
-grade: stable
-confinement: strict
+grade: devel
+confinement: devmode
 compression: lzo
 architectures:
   - build-on: amd64
@@ -94,6 +94,7 @@ slots:
 parts:
   lutris:
     source: https://github.com/lutris/lutris.git
+    source-tag: v0.5.13
     after: [lutris-runtime]
     plugin: meson
     parse-info: [usr/share/metainfo/net.lutris.Lutris.metainfo.xml]
