--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -117,7 +117,7 @@ parts:
       # WORKAROUND: Use python from search path, the path detected by meson doesn't exist when running the Snap
       sed -e '1c#!/usr/bin/env python3' -i ${CRAFT_PART_INSTALL}/snap/lutris/current/usr/bin/lutris
     organize:
-      snap/lutris/current/usr: usr 
+      snap/lutris/current: . 
   
   lutris-runtime:
     plugin: nil
@@ -174,8 +174,6 @@ parts:
     source: https://github.com/ashuntu/gamemode.git
     source-branch: "add-snap-support"
     plugin: meson
-    organize:
-      snap/lutris/current/usr: usr
     meson-parameters:
       - --prefix=/usr
     build-packages:
@@ -190,12 +188,10 @@ parts:
     source: https://github.com/flightlessmango/MangoHud.git
     source-tag: "v0.6.8"
     plugin: meson
-    organize:
-      snap/lutris/current/usr: usr
     build-environment:
       - CC: gcc -m32
       - CXX: g++ -m32
-      - PKG_CONFIG_PATH: /usr/lib/i386-linux-gnu/pkgconfig:/usr/lib/x86_64-linux-gnu/pkgconfig:/usr/lib/pkgconfig
+      - PKG_CONFIG_PATH: /usr/lib/$CRAFT_ARCH_TRIPLET/pkgconfig:/usr/lib/pkgconfig:$PKG_CONFIG_PATH
     meson-parameters:
       - --prefix=/usr
       - --libdir=lib/i386-linux-gnu
@@ -220,8 +216,6 @@ parts:
     source: https://github.com/flightlessmango/MangoHud.git
     source-tag: "v0.6.8"
     plugin: meson
-    organize:
-      snap/lutris/current/usr: usr
     meson-parameters:
       - --prefix=/usr
       - -Dappend_libdir_mangohud=false
