trying to fix the migrate-config error

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -107,9 +107,9 @@ parts:
     source: .
     stage-packages:
       - zenity
-    override-build: |
-      chmod 755 $CRAFT_PART_SRC/migrate-config
+    override-pull: |
       craftctl default
+      chmod +x migrate-config
     stage:
       - bin/migrate-config
       - usr/bin/zenity
